first working feature

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/skeleton.css">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/ionicons.min.css">
+
     <meta name="p:domain_verify" content="e3b5f2bc88524cfee5e147b6df20e366"/>
 
     <meta name="google-site-verification" content="05Ljy3vvlIwwLSwjtnU_UisztIEPXWreGx2zoguypu0" />
