move stuff into public

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
     <meta name="description"    content="Join the war against boredom and get some internet!"/>
     <link rel="canonical"       href="http://getsomeinternet.com/" />
 
-    <link rel="icon" type="image/png" href="./common/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="./common/favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="public/common/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="public/common/favicon-16x16.png" sizes="16x16" />
 
     <meta name="twitter:title"      content="Have some internet"/>
     <meta name="twitter:site"       content="@getsomeinternet" />
@@ -25,12 +25,10 @@
     <meta property="author"         content="GetSomeInternet" />
     <meta property="og:description"  content="Join the war against boredom and get some internet!"/>
 
-    <link rel="stylesheet" href="css/main.css"/>
-    <link rel="stylesheet" href="css/nav.css"/>
-    <link rel="stylesheet" href="css/modals.css"/>
-    <link rel="stylesheet" href="css/stage.css"/>
-    <link rel="stylesheet" href="css/mobile.css"/>
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="public/css/main.css">
+    <link rel="stylesheet" href="public/css/normalize.css">
+    <link rel="stylesheet" href="public/css/skeleton.css">
+    <link rel="stylesheet" href="public/css/ionicons.min.css">
 
      <meta name="google-site-verification" content="05Ljy3vvlIwwLSwjtnU_UisztIEPXWreGx2zoguypu0" />
      <script>
@@ -45,7 +43,7 @@
      <script src='http://platform.vine.co/static/scripts/embed.js' async></script>
   </head>
   <body>
-    <section id="gsi"></section>
-    <script src="static/bundle.js"></script>
+    <section id="root"></section>
+    <script async src="public/static/bundle.js"></script>
   </body>
 </html>
