--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
     <meta name="keywords"       content="internet, entertainment, get some internet, gsi, boredom, bored"/>
-    <meta name="description"    content="Join the war against boredom and get some internet!"/>
+    <meta name="description"    content="One place, the whole internet"/>
     <link rel="canonical"       href="http://getsomeinternet.com/" />
 
     <link rel="icon" type="image/png" href="public/common/favicon-32x32.png" sizes="32x32" />
@@ -16,14 +16,14 @@
     <meta name="twitter:site"       content="@getsomeinternet" />
     <meta name="twitter:domain"     content="getsomeinternet.com" />
     <meta name="twitter:creator"    content="@getsomeinternet" />
-    <meta name="twitter:description" content="Join the war against boredom and get some internet!"/>
+    <meta name="twitter:description" content="One place, the whole internet"/>
 
     <meta property="og:title"       content="Have some internet"/>
     <meta property="og:url"         content="http://getsomeinternet.com/" />
     <meta property="og:site_name"   content="GetSomeInternet" />
     <meta property="fb:admins"      content="390754097780247" />
     <meta property="author"         content="GetSomeInternet" />
-    <meta property="og:description"  content="Join the war against boredom and get some internet!"/>
+    <meta property="og:description"  content="One place, the whole internet"/>
 
     <link rel="stylesheet" href="public/css/main.css">
     <link rel="stylesheet" href="public/css/normalize.css">
@@ -44,6 +44,6 @@
   </head>
   <body>
     <section id="root"></section>
-    <script async src="public/static/bundle.js"></script>
+    <script async src="public/bundle.js"></script>
   </body>
 </html>
