--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,6 @@
   </head>
   <body>
     <section id="root"></section>
-    <script async src="public/bundle.js"></script>
+    <script src="public/bundle.js"></script>
   </body>
 </html>
