setup proper dev environment

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
     <meta name="description"    content="One place, the whole internet"/>
     <link rel="canonical"       href="http://getsomeinternet.com/" />
 
-    <link rel="icon" type="image/png" href="public/common/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="public/common/favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="/public/common/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="/public/common/favicon-16x16.png" sizes="16x16" />
 
     <meta name="twitter:title"      content="Have some internet"/>
     <meta name="twitter:site"       content="@getsomeinternet" />
@@ -25,10 +25,10 @@
     <meta property="author"         content="GetSomeInternet" />
     <meta property="og:description"  content="One place, the whole internet"/>
 
-    <link rel="stylesheet" href="public/css/main.css">
-    <link rel="stylesheet" href="public/css/normalize.css">
-    <link rel="stylesheet" href="public/css/skeleton.css">
-    <link rel="stylesheet" href="public/css/ionicons.min.css">
+    <link rel="stylesheet" href="/public/css/main.css">
+    <link rel="stylesheet" href="/public/css/normalize.css">
+    <link rel="stylesheet" href="/public/css/skeleton.css">
+    <link rel="stylesheet" href="/public/css/ionicons.min.css">
 
      <meta name="google-site-verification" content="05Ljy3vvlIwwLSwjtnU_UisztIEPXWreGx2zoguypu0" />
      <script>
@@ -43,6 +43,6 @@
   </head>
   <body>
     <section id="root"></section>
-    <script src="public/bundle.js"></script>
+    <script src="/public/bundle.js"></script>
   </body>
 </html>
