dont even mention this commit

--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,7 @@
          ga('create', 'UA-68224459-1', 'auto');
          ga('send', 'pageview');
      </script>
+    <script src="/public/froogaloop.js"></script>
   </head>
   <body>
     <section id="root"></section>
