--- a/public/things.html
+++ b/public/things.html
@@ -13,7 +13,7 @@
     <link rel="icon" type="image/png" href="public/common/favicon-16x16.png" sizes="16x16" />
 
     <meta name="source" content="{{{source}}}"/>
-    <meta name="list_hash" content="{{{_hash}}}"/>
+    <meta id="list_hash" name="list_hash" content="{{{_hash}}}"/>
 
     <meta name="twitter:title"      content="{{title}}"/>
     <meta name="twitter:site"       content="@getsomeinternet" />
