--- a/public/thing.html
+++ b/public/thing.html
@@ -1,4 +1,4 @@
-<html lang="en"/>
+<html>
   <head>
     <meta charset="utf-8"/>
     <title> {{title}} @ GetSomeInternet </title>
@@ -95,9 +95,6 @@
         <meta name="twitter:image:src"  content="{{{url}}}" />
         <meta property="og:type"                content="article" />
         <meta property="og:image"               content="{{{data}}}" />
-        <meta property="og:image:width"         content="365" />
-        <meta property="og:image:height"        content="150" />
-        <meta property="og:description"         content="Get Some Internet: War against boredom."/>
     {{/img}}
     {{#vimeo}}
       <meta property="og:type"              content="video"/>
