--- a/public/things.html
+++ b/public/things.html
@@ -1,12 +1,12 @@
 <html lang="en"/>
   <head>
     <meta charset="utf-8"/>
-    <title> {{title}} @ GetSomeInternet </title>
+    <title> {{title}} </title>
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
-    <meta name="keywords"       content="internet, entertainment, get some internet, gsi, boredom, bored, {{fragments}}"/>
-    <meta name="description"    content="One place, the whole internet"/>
+    <meta name="keywords"       content="internet, entertainment, get some internet, gsi, boredom, bored, {{title}}"/>
+    <meta name="description"    content="A new way to discover the internet"/>
     <link rel="canonical"       href="{{{url}}}"/>
 
     <link rel="icon" type="image/png" href="public/common/favicon-32x32.png" sizes="32x32" />
@@ -19,14 +19,14 @@
     <meta name="twitter:site"       content="@getsomeinternet" />
     <meta name="twitter:domain"     content="getsomeinternet.com" />
     <meta name="twitter:creator"    content="@getsomeinternet" />
-    <meta name="twitter:description" content="One place, the whole internet"/>
+    <meta name="twitter:description" content="A new way to discover the internet"/>
 
     <meta property="og:title"       content="{{title}}"/>
     <meta property="og:url"         content="{{{url}}}" />
     <meta property="og:site_name"   content="GetSomeInternet" />
     <meta property="fb:admins"      content="390754097780247" />
     <meta property="author"         content="GetSomeInternet" />
-    <meta property="og:description"  content="One place, the whole internet"/>
+    <meta property="og:description"  content="A new way to discover the internet"/>
 
     <link rel="stylesheet" href="public/css/main.css">
     <link rel="stylesheet" href="public/css/normalize.css">
