--- a/public/thing.html
+++ b/public/thing.html
@@ -29,7 +29,7 @@
     <meta property="og:description"  content="One place, the whole internet"/>
 
     {{#youtube}}
-        <meta property="og:image"           content="https://i.ytimg.com/vi/{{{data}}}/maxresdefault.jpg"/>
+        <meta property="og:image"           content="http://i.ytimg.com/vi/{{{data}}}/maxresdefault.jpg"/>
         <meta property="og:type"            content="video"/>
         <meta property="og:video:url"       content="https://www.youtube.com/embed/{{{data}}}"/>
         <meta property="og:video:secure_url"content="https://www.youtube.com/embed/{{{data}}}"/>
@@ -37,7 +37,7 @@
         <meta property="og:video:width"     content="1280"/>
         <meta property="og:video:height"    content="720"/>
         <meta property="og:video:url"       content="http://www.youtube.com/v/{{{data}}}?version=3&amp;autohide=1"/>
-        <meta property="og:video:secure_url"content="https://www.youtube.com/v/{{{data}}}?version=3&amp;autohide=1"/>
+        <meta property="og:video:secure_url"content="http://www.youtube.com/v/{{{data}}}?version=3&amp;autohide=1"/>
         <meta property="og:video:type"      content="application/x-shockwave-flash"/>
         <meta property="og:video:width"     content="1280"/>
         <meta property="og:video:height"    content="720"/>
@@ -48,11 +48,11 @@
         <meta name="twitter:player:width" content="1280"/>
         <meta name="twitter:player:height" content="720"/>
         <meta name="twitter:title"      content="{{title}}"/>
-        <link rel="shortcut icon" href="https://s.ytimg.com/yts/img/favicon-{{{data}}}.ico" type="image/x-icon"/>
-        <link rel="icon" href="https://s.ytimg.com/yts/img/favicon_32-{{{data}}}.png" sizes="32x32"/>
-        <link rel="icon" href="https://s.ytimg.com/yts/img/favicon_48-{{{data}}}.png" sizes="48x48"/>
-        <link rel="icon" href="https://s.ytimg.com/yts/img/favicon_96-{{{data}}}.png" sizes="96x96"/>
-        <link rel="icon" href="https://s.ytimg.com/yts/img/favicon_144-{{{data}}}.png" sizes="144x144"/>
+        <link rel="shortcut icon" href="http://s.ytimg.com/yts/img/favicon-{{{data}}}.ico" type="image/x-icon"/>
+        <link rel="icon" href="http://s.ytimg.com/yts/img/favicon_32-{{{data}}}.png" sizes="32x32"/>
+        <link rel="icon" href="http://s.ytimg.com/yts/img/favicon_48-{{{data}}}.png" sizes="48x48"/>
+        <link rel="icon" href="http://s.ytimg.com/yts/img/favicon_96-{{{data}}}.png" sizes="96x96"/>
+        <link rel="icon" href="http://s.ytimg.com/yts/img/favicon_144-{{{data}}}.png" sizes="144x144"/>
     {{/youtube}}
     {{#video}}
         <meta property="og:type"              content="video.other" />
