--- a/public/thing.html
+++ b/public/thing.html
@@ -31,39 +31,34 @@
     {{#youtube}}
         <meta property="og:image"           content="http://i.ytimg.com/vi/{{{data}}}/maxresdefault.jpg"/>
         <meta property="og:type"            content="video"/>
-        <meta property="og:video:url"       content="https://www.youtube.com/embed/{{{data}}}"/>
-        <meta property="og:video:secure_url"content="https://www.youtube.com/embed/{{{data}}}"/>
-        <meta property="og:video:type"      content="text/html"/>
+        <meta property="og:video:url"       content="http://www.youtube.com/embed/{{{data}}}"/>
         <meta property="og:video:width"     content="1280"/>
         <meta property="og:video:height"    content="720"/>
-        <meta property="og:video:url"       content="http://www.youtube.com/v/{{{data}}}?version=3&amp;autohide=1"/>
-        <meta property="og:video:secure_url"content="http://www.youtube.com/v/{{{data}}}?version=3&amp;autohide=1"/>
         <meta property="og:video:type"      content="application/x-shockwave-flash"/>
-        <meta property="og:video:width"     content="1280"/>
-        <meta property="og:video:height"    content="720"/>
-        <meta name="twitter:card" content="player"/>
-        <meta name="twitter:url" content="https://www.youtube.com/watch?v={{{data}}}"/>
-        <meta name="twitter:image" content="https://i.ytimg.com/vi/{{{data}}}/maxresdefault.jpg"/>
-        <meta name="twitter:player" content="https://www.youtube.com/embed/{{{data}}}"/>
-        <meta name="twitter:player:width" content="1280"/>
-        <meta name="twitter:player:height" content="720"/>
-        <meta name="twitter:title"      content="{{title}}"/>
-        <link rel="shortcut icon" href="http://s.ytimg.com/yts/img/favicon-{{{data}}}.ico" type="image/x-icon"/>
-        <link rel="icon" href="http://s.ytimg.com/yts/img/favicon_32-{{{data}}}.png" sizes="32x32"/>
-        <link rel="icon" href="http://s.ytimg.com/yts/img/favicon_48-{{{data}}}.png" sizes="48x48"/>
-        <link rel="icon" href="http://s.ytimg.com/yts/img/favicon_96-{{{data}}}.png" sizes="96x96"/>
-        <link rel="icon" href="http://s.ytimg.com/yts/img/favicon_144-{{{data}}}.png" sizes="144x144"/>
+
+        <meta name="twitter:card"           content="player"/>
+        <meta name="twitter:url"            content="http://www.youtube.com/watch?v={{{data}}}"/>
+        <meta name="twitter:image"          content="http://i.ytimg.com/vi/{{{data}}}/maxresdefault.jpg"/>
+        <meta name="twitter:player"         content="http://www.youtube.com/embed/{{{data}}}"/>
+        <meta name="twitter:player:width"   content="1280"/>
+        <meta name="twitter:player:height"  content="720"/>
+        <meta name="twitter:title"          content="{{title}}"/>
+
+        <link rel="shortcut icon"   href="http://s.ytimg.com/yts/img/favicon-{{{data}}}.ico" type="image/x-icon"/>
+        <link rel="icon"            href="http://s.ytimg.com/yts/img/favicon_32-{{{data}}}.png" sizes="32x32"/>
+        <link rel="icon"            href="http://s.ytimg.com/yts/img/favicon_48-{{{data}}}.png" sizes="48x48"/>
+        <link rel="icon"            href="http://s.ytimg.com/yts/img/favicon_96-{{{data}}}.png" sizes="96x96"/>
+        <link rel="icon"            href="http://s.ytimg.com/yts/img/favicon_144-{{{data}}}.png" sizes="144x144"/>
     {{/youtube}}
     {{#video}}
-        <meta property="og:type"              content="video.other" />
-        <meta property="og:image:width"       content="365" />
-        <meta property="og:image:height"      content="150" />
-        <meta property="og:image"             content="{{{data}}}"/>
-        <meta property="og:video"             content="{{{data}}}" />
-        <meta property="og:video:type"        content="application/x-shockwave-flash" />
-        <meta property="og:video:width"       content="500" />
-        <meta property="og:video:height"      content="205" />
-        <meta property="og:video:type"        content="video/mp4" />
+        <meta property="og:type"            content="video.other" />
+        <meta property="og:image"           content="{{{data}}}"/>
+        <meta property="og:video"           content="{{{data}}}" />
+        <meta property="og:video:type"      content="application/x-shockwave-flash" />
+        <meta property="og:video:width"     content="500" />
+        <meta property="og:video:height"    content="205" />
+        <meta property="og:video:type"      content="video/mp4" />
+
         <meta name="twitter:card"                       content="player" />
         <meta name="twitter:player:width"               content="365" />
         <meta name="twitter:player:height"              content="150" />
@@ -98,17 +93,17 @@
     {{/img}}
     {{#vimeo}}
       <meta property="og:type"              content="video"/>
-      <meta property="og:image"             content="https://i.vimeocdn.com/video/{{{data}}}_1280x720.webp"/>
+      <meta property="og:image"             content="http://i.vimeocdn.com/video/{{{data}}}_1280x720.webp"/>
       <meta property="og:image:width"       content="1280"/>
       <meta property="og:image:height"      content="720"/>
-      <meta property="og:video:url"         content="https://player.vimeo.com/video/{{{data}}}?autoplay=1"/>
-      <meta property="og:video:url"         content="https://vimeo.com/moogaloop.swf?clip_id={{data}}&amp;autoplay=1"/>
+      <meta property="og:video:url"         content="http://player.vimeo.com/video/{{{data}}}?autoplay=1"/>
+      <meta property="og:video:url"         content="http://vimeo.com/moogaloop.swf?clip_id={{data}}&amp;autoplay=1"/>
       <meta property="og:video:type"        content="application/x-shockwave-flash"/>
       <meta property="og:video:width"       content="1280"/>
       <meta property="og:video:height"      content="720"/>
       <meta name="twitter:card"             content="player"/>
-      <meta name="twitter:image"            content="https://i.vimeocdn.com/video/{{{data}}}_1280x720.webp"/>
-      <meta name="twitter:player"           content="https://player.vimeo.com/video/{{{data}}}"/>
+      <meta name="twitter:image"            content="http://i.vimeocdn.com/video/{{{data}}}_1280x720.webp"/>
+      <meta name="twitter:player"           content="http://player.vimeo.com/video/{{{data}}}"/>
       <meta name="twitter:player:width"     content="1280"/>
       <meta name="twitter:player:height"    content="720"/>
     {{/vimeo}}
