trying to fix video linking

--- a/public/thing.html
+++ b/public/thing.html
@@ -54,6 +54,7 @@
         <meta property="og:type"            content="video.other" />
         <meta property="og:image"           content="{{{data}}}"/>
         <meta property="og:video"           content="{{{data}}}" />
+        <meta property="og:video.url"       content="{{{data}}}" />
         <meta property="og:video:type"      content="application/x-shockwave-flash" />
         <meta property="og:video:width"     content="500" />
         <meta property="og:video:height"    content="205" />
