update some stuff

--- a/public/thing.html
+++ b/public/thing.html
@@ -24,7 +24,6 @@
     <meta property="og:title"       content="{{title}}"/>
     <meta property="og:url"         content="{{{url}}}" />
     <meta property="og:site_name"   content="GetSomeInternet" />
-    <meta property="fb:admins"      content="390754097780247" />
     <meta property="author"         content="GetSomeInternet" />
     <meta property="og:description"  content="One place, the whole internet"/>
 
@@ -51,15 +50,10 @@
         <link rel="icon"            href="http://s.ytimg.com/yts/img/favicon_144-{{{data}}}.png" sizes="144x144"/>
     {{/youtube}}
     {{#video}}
-        <meta property="og:type"            content="video.other" />
-        <meta property="og:image"           content="{{{data}}}"/>
-        <meta property="og:video"           content="{{{data}}}" />
-        <meta property="og:video.url"       content="{{{data}}}" />
-        <meta property="og:video:type"      content="application/x-shockwave-flash" />
-        <meta property="og:video:width"     content="500" />
-        <meta property="og:video:height"    content="205" />
         <meta property="og:video:type"      content="video/mp4" />
-
+        <meta property="og:video"           content="{{{data}}}" />
+        <meta property="og:video:url"       content="{{{data}}}" />
+        <meta property="og:video:type"      content="application/x-shockwave-flash" />
         <meta name="twitter:card"                       content="player" />
         <meta name="twitter:player:width"               content="365" />
         <meta name="twitter:player:height"              content="150" />
