change some things

--- a/public/thing.html
+++ b/public/thing.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
     <meta name="keywords"       content="internet, entertainment, get some internet, gsi, boredom, bored, {{fragments}}"/>
-    <meta name="description"    content="One place, the whole internet"/>
+    <meta name="description"    content="A new way to discover the internet"/>
     <link rel="canonical"       href="{{{url}}}"/>
 
     <link rel="icon" type="image/png" href="public/common/favicon-32x32.png" sizes="32x32" />
@@ -19,13 +19,13 @@
     <meta name="twitter:site"       content="@getsomeinternet" />
     <meta name="twitter:domain"     content="getsomeinternet.com" />
     <meta name="twitter:creator"    content="@getsomeinternet" />
-    <meta name="twitter:description" content="One place, the whole internet"/>
+    <meta name="twitter:description" content="A new way to discover the internet"/>
 
     <meta property="og:title"       content="{{title}}"/>
     <meta property="og:url"         content="{{{url}}}" />
     <meta property="og:site_name"   content="GetSomeInternet" />
     <meta property="author"         content="GetSomeInternet" />
-    <meta property="og:description"  content="One place, the whole internet"/>
+    <meta property="og:description"  content="A new way to discover the internet"/>
 
     {{#youtube}}
         <meta property="og:image"           content="http://i.ytimg.com/vi/{{{data}}}/maxresdefault.jpg"/>
