--- a/public/things.html
+++ b/public/things.html
@@ -1,11 +1,11 @@
 <html lang="en"/>
   <head>
     <meta charset="utf-8"/>
-    <title> {{title}} </title>
+    <title> {{results}} things matching {{title}} @ GetSomeInternet </title>
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
-    <meta name="keywords"       content="internet, entertainment, get some internet, gsi, boredom, bored, {{title}}"/>
+    <meta name="keywords"       content="internet, entertainment, get some internet, gsi, boredom, bored, {{_unhash}}"/>
     <meta name="description"    content="A new way to discover the internet"/>
     <link rel="canonical"       href="{{{url}}}"/>
 
