--- a/public/thing.html
+++ b/public/thing.html
@@ -28,7 +28,7 @@
     <meta property="og:description"  content="A new way to discover the internet"/>
 
     {{#youtube}}
-        <meta property="og:image"           content="http://i1.ytimg.com/vi/rdKBc74kkD0/{{{data}}}/0.jpg"/>
+        <meta property="og:image"           content="http://i1.ytimg.com/vi/{{{data}}}/0.jpg"/>
         <meta property="og:type"            content="video"/>
         <meta property="og:video:url"       content="http://www.youtube.com/v/{{{data}}}"/>
         <meta property="og:video:type"      content="application/x-shockwave-flash"/>
@@ -37,7 +37,7 @@
 
         <meta name="twitter:card"           content="player"/>
         <meta name="twitter:url"            content="http://www.youtube.com/watch?v={{{data}}}"/>
-        <meta name="twitter:image"          content="http://i1.ytimg.com/vi/rdKBc74kkD0/{{{data}}}/0.jpg"/>
+        <meta name="twitter:image"          content="http://i1.ytimg.com/vi/{{{data}}}/0.jpg"/>
         <meta name="twitter:player"         content="http://www.youtube.com/v/{{{data}}}"/>
         <meta name="twitter:player:width"   content="1280"/>
         <meta name="twitter:player:height"  content="720"/>
