--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8"/>
     <title> GetSomeInternet </title>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
     <meta name="keywords"       content="internet, entertainment, get some internet, gsi, boredom, bored"/>
