--- a/public/things.html
+++ b/public/things.html
@@ -4,6 +4,7 @@
     <title> {{results}} things matching {{title}} @ GetSomeInternet </title>
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta name="keywords"       content="internet, entertainment, get some internet, gsi, boredom, bored, {{_unhash}}"/>
     <meta name="description"    content="A new way to discover the internet"/>
