add some thingss

--- a/public/index.html
+++ b/public/index.html
@@ -13,18 +13,23 @@
     <link rel="icon" type="image/png" href="/public/common/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="/public/common/favicon-16x16.png" sizes="16x16" />
 
-    <meta name="twitter:title"      content="Have some internet"/>
+    <meta name="twitter:title"      content="Get some internet"/>
     <meta name="twitter:site"       content="@getsomeinternet" />
     <meta name="twitter:domain"     content="getsomeinternet.com" />
     <meta name="twitter:creator"    content="@getsomeinternet" />
     <meta name="twitter:description" content="One place, the whole internet"/>
 
-    <meta property="og:title"       content="Have some internet"/>
+    <meta property="og:title"       content="Get some internet"/>
     <meta property="og:url"         content="http://getsomeinternet.com/" />
     <meta property="og:site_name"   content="GetSomeInternet" />
     <meta property="fb:admins"      content="390754097780247" />
     <meta property="author"         content="GetSomeInternet" />
-    <meta property="og:description"  content="One place, the whole internet"/>
+    <meta property="og:description" content="One place, the whole internet"/>
+    <meta property="og:image"       content="/public/common/logo_transp.png" />
+
+    <meta name="twitter:card"       content="photo" />
+    <meta name="twitter:image"      content="/public/common/logo_transp.png" />
+    <meta name="twitter:image:src"  content="/public/common/logo_transp.png" />
 
     <link rel="stylesheet" href="/public/css/main.css">
     <link rel="stylesheet" href="/public/css/normalize.css">
@@ -32,6 +37,12 @@
     <link rel="stylesheet" href="/public/css/ionicons.min.css">
 
      <meta name="google-site-verification" content="05Ljy3vvlIwwLSwjtnU_UisztIEPXWreGx2zoguypu0" />
+
+    <script type="text/javascript">
+        window.cookieconsent_options = {"message":"This website uses cookies to ensure you get the best experience on our website","dismiss":"Got it!","learnMore":"More info","link":null,"theme":"dark-bottom"}; var cookieconsent_id = '5181e7f8-9398-4c34-9502-110917d65748';</script>
+
+    <script type="text/javascript" src="//cdn.front.to/libs/cookieconsent.min.js"></script>
+    <noscript><a href="http://cookie-consent.org/">EU cookie consent script</a></noscript>
      <script>
          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
