--- a/public/things.html
+++ b/public/things.html
@@ -21,6 +21,9 @@
     <meta name="twitter:domain"     content="getsomeinternet.com" />
     <meta name="twitter:creator"    content="@getsomeinternet" />
     <meta name="twitter:description" content="A new way to discover the internet"/>
+    <meta name="twitter:card"       content="photo" />
+    <meta name="twitter:image"      content="/public/common/logo_transp.png" />
+    <meta name="twitter:image:src"  content="/public/common/logo_transp.png" />
 
     <meta property="og:title"       content="{{title}}"/>
     <meta property="og:url"         content="{{{url}}}" />
@@ -28,6 +31,8 @@
     <meta property="fb:admins"      content="390754097780247" />
     <meta property="author"         content="GetSomeInternet" />
     <meta property="og:description"  content="A new way to discover the internet"/>
+    <meta property="og:description" content="One place, the whole internet"/>
+    <meta property="og:image"       content="/public/common/logo_transp.png" />
 
     <link rel="stylesheet" href="public/css/main.css">
     <link rel="stylesheet" href="public/css/normalize.css">
