--- a/public/index.html
+++ b/public/index.html
@@ -41,18 +41,9 @@
     <script type="text/javascript">
         window.cookieconsent_options = {"message":"This website uses cookies to ensure you get the best experience on our website","dismiss":"Got it!","learnMore":"More info","link":null,"theme":"dark-bottom"}; var cookieconsent_id = '5181e7f8-9398-4c34-9502-110917d65748';</script>
 
-    <script type="text/javascript" src="//cdn.front.to/libs/cookieconsent.min.js"></script>
+    <script async type="text/javascript" src="//cdn.front.to/libs/cookieconsent.min.js"></script>
     <noscript><a href="http://cookie-consent.org/">EU cookie consent script</a></noscript>
-     <script>
-         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-         ga('create', 'UA-68224459-1', 'auto');
-         ga('send', 'pageview');
-     </script>
-    <script src="/public/froogaloop.js"></script>
+    <script async src="/public/froogaloop.js"></script>
   </head>
   <body>
     <section id="root"></section>
