--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
     <meta name="description"    content="One place, the whole internet"/>
     <link rel="canonical"       href="http://getsomeinternet.com/" />
 
-    <link rel="icon" type="image/png" href="/public/common/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="/public/common/favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="/common/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="/common/favicon-16x16.png" sizes="16x16" />
 
     <meta name="twitter:title"      content="Get some internet"/>
     <meta name="twitter:site"       content="@getsomeinternet" />
@@ -25,16 +25,16 @@
     <meta property="fb:admins"      content="390754097780247" />
     <meta property="author"         content="GetSomeInternet" />
     <meta property="og:description" content="One place, the whole internet"/>
-    <meta property="og:image"       content="/public/common/logo_transp.png" />
+    <meta property="og:image"       content="/common/logo_transp.png" />
 
     <meta name="twitter:card"       content="photo" />
-    <meta name="twitter:image"      content="/public/common/logo_transp.png" />
-    <meta name="twitter:image:src"  content="/public/common/logo_transp.png" />
+    <meta name="twitter:image"      content="/common/logo_transp.png" />
+    <meta name="twitter:image:src"  content="/common/logo_transp.png" />
 
-    <link rel="stylesheet" href="/public/css/main.css">
-    <link rel="stylesheet" href="/public/css/normalize.css">
-    <link rel="stylesheet" href="/public/css/skeleton.css">
-    <link rel="stylesheet" href="/public/css/ionicons.min.css">
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="/css/skeleton.css">
+    <link rel="stylesheet" href="/css/ionicons.min.css">
 
      <meta name="google-site-verification" content="05Ljy3vvlIwwLSwjtnU_UisztIEPXWreGx2zoguypu0" />
 
@@ -43,10 +43,10 @@
 
     <script async type="text/javascript" src="//cdn.front.to/libs/cookieconsent.min.js"></script>
     <noscript><a href="http://cookie-consent.org/">EU cookie consent script</a></noscript>
-    <script async src="/public/froogaloop.js"></script>
+    <script async src="/froogaloop.js"></script>
   </head>
   <body>
     <section id="root"></section>
-    <script src="/public/bundle.js"></script>
+    <script src="/bundle.js"></script>
   </body>
 </html>
