--- a/public/thing.html
+++ b/public/thing.html
@@ -10,8 +10,8 @@
     <meta name="description"    content="A new way to discover the internet"/>
     <link rel="canonical"       href="{{{url}}}"/>
 
-    <link rel="icon" type="image/png" href="public/common/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="public/common/favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="/common/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="/common/favicon-16x16.png" sizes="16x16" />
 
     <meta name="source" content="{{{source}}}"/>
     <meta name="item_hash" id="item_hash" content="{{{_hash}}}"/>
@@ -101,15 +101,15 @@
       <meta name="twitter:player:height"    content="720"/>
     {{/vimeo}}
 
-    <link rel="stylesheet" href="public/css/main.css">
-    <link rel="stylesheet" href="public/css/normalize.css">
-    <link rel="stylesheet" href="public/css/skeleton.css">
-    <link rel="stylesheet" href="public/css/ionicons.min.css">
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="/css/skeleton.css">
+    <link rel="stylesheet" href="/css/ionicons.min.css">
 
      <meta name="google-site-verification" content="05Ljy3vvlIwwLSwjtnU_UisztIEPXWreGx2zoguypu0" />
   </head>
   <body>
     <section id="root"></section>
-    <script src="public/bundle.js"></script>
+    <script src="/bundle.js"></script>
   </body>
 </html>
