--- a/public/things.html
+++ b/public/things.html
@@ -10,8 +10,8 @@
     <meta name="description"    content="A new way to discover the internet"/>
     <link rel="canonical"       href="{{{url}}}"/>
 
-    <link rel="icon" type="image/png" href="public/common/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="public/common/favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="/common/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="/common/favicon-16x16.png" sizes="16x16" />
 
     <meta name="source" content="{{{source}}}"/>
     <meta id="list_hash" name="list_hash" content="{{{_hash}}}"/>
@@ -22,8 +22,8 @@
     <meta name="twitter:creator"    content="@getsomeinternet" />
     <meta name="twitter:description" content="A new way to discover the internet"/>
     <meta name="twitter:card"       content="photo" />
-    <meta name="twitter:image"      content="/public/common/logo_transp.png" />
-    <meta name="twitter:image:src"  content="/public/common/logo_transp.png" />
+    <meta name="twitter:image"      content="//common/logo_transp.png" />
+    <meta name="twitter:image:src"  content="//common/logo_transp.png" />
 
     <meta property="og:title"       content="{{title}}"/>
     <meta property="og:url"         content="{{{url}}}" />
@@ -32,17 +32,17 @@
     <meta property="author"         content="GetSomeInternet" />
     <meta property="og:description"  content="A new way to discover the internet"/>
     <meta property="og:description" content="One place, the whole internet"/>
-    <meta property="og:image"       content="/public/common/logo_transp.png" />
+    <meta property="og:image"       content="//common/logo_transp.png" />
 
-    <link rel="stylesheet" href="public/css/main.css">
-    <link rel="stylesheet" href="public/css/normalize.css">
-    <link rel="stylesheet" href="public/css/skeleton.css">
-    <link rel="stylesheet" href="public/css/ionicons.min.css">
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="/css/skeleton.css">
+    <link rel="stylesheet" href="/css/ionicons.min.css">
 
      <meta name="google-site-verification" content="05Ljy3vvlIwwLSwjtnU_UisztIEPXWreGx2zoguypu0" />
   </head>
   <body>
     <section id="root"></section>
-    <script src="public/bundle.js"></script>
+    <script src="/bundle.js"></script>
   </body>
 </html>
