--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/skeleton.css">
     <link rel="stylesheet" href="/css/ionicons.min.css">
+    <link rel="manifest"   href="/manifest.json">
 
      <meta name="google-site-verification" content="05Ljy3vvlIwwLSwjtnU_UisztIEPXWreGx2zoguypu0" />
 
@@ -44,6 +45,17 @@
     <script async type="text/javascript" src="//cdn.front.to/libs/cookieconsent.min.js"></script>
     <noscript><a href="http://cookie-consent.org/">EU cookie consent script</a></noscript>
     <script async src="/froogaloop.js"></script>
+    <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async></script>
+    <script>
+      var OneSignal = OneSignal || [];
+      OneSignal.push(["init", {
+        appId: "6647d67c-167b-4d70-bca4-3f82c235e594",
+        autoRegister: false,
+        notifyButton: {
+          enable: true /* Set to false to hide */
+        }
+      }]);
+    </script>
   </head>
   <body>
     <section id="root"></section>
