--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
     <meta name="keywords"       content="internet, entertainment, get some internet, gsi, boredom, bored"/>
-    <meta name="description"    content="One place, the whole internet"/>
+    <meta name="description"    content="A new way to explore the internet. Enjoy endless feeds of documentaries, memes, music and much more."/>
     <link rel="canonical"       href="http://getsomeinternet.com/" />
 
     <link rel="icon" type="image/png" href="/common/favicon-32x32.png" sizes="32x32" />
@@ -43,19 +43,10 @@
         window.cookieconsent_options = {"message":"This website uses cookies to ensure you get the best experience on our website","dismiss":"Got it!","learnMore":"More info","link":null,"theme":"dark-bottom"}; var cookieconsent_id = '5181e7f8-9398-4c34-9502-110917d65748';</script>
 
     <script async type="text/javascript" src="//cdn.front.to/libs/cookieconsent.min.js"></script>
-    <noscript><a href="http://cookie-consent.org/">EU cookie consent script</a></noscript>
+    <noscript><a href="https://cookie-consent.org/">EU cookie consent script</a></noscript>
     <script async src="/froogaloop.js"></script>
     <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async></script>
-    <script>
-      var OneSignal = OneSignal || [];
-      OneSignal.push(["init", {
-        appId: "6647d67c-167b-4d70-bca4-3f82c235e594",
-        autoRegister: false,
-        notifyButton: {
-          enable: true /* Set to false to hide */
-        }
-      }]);
-    </script>
+    <script>var OneSignal = OneSignal || [];</script>
   </head>
   <body>
     <section id="root"></section>
